<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>testing-libraries-2</artifactId>
   <name>testing-libraries-2</name>

   <parent>
      <groupId>cn.tuyucheng.taketoday</groupId>
      <artifactId>software.test</artifactId>
      <version>1.0.0</version>
   </parent>

   <dependencyManagement>
      <dependencies>
         <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
         </dependency>
      </dependencies>
   </dependencyManagement>

   <dependencies>
      <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
         <version>${lombok.version}</version>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>com.github.stefanbirkner</groupId>
         <artifactId>system-rules</artifactId>
         <version>${system-rules.version}</version>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>com.github.stefanbirkner</groupId>
         <artifactId>system-lambda</artifactId>
         <version>${system-lambda.version}</version>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>uk.org.webcompere</groupId>
         <artifactId>system-stubs-jupiter</artifactId>
         <version>${system-stubs.version}</version>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>uk.org.webcompere</groupId>
         <artifactId>system-stubs-junit4</artifactId>
         <version>${system-stubs.version}</version>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.awaitility</groupId>
         <artifactId>awaitility</artifactId>
         <version>${awaitility.version}</version>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.awaitility</groupId>
         <artifactId>awaitility-proxy</artifactId>
         <version>${awaitility.version}</version>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>io.specto</groupId>
         <artifactId>hoverfly-java</artifactId>
         <version>${hoverfly-java.version}</version>
      </dependency>
      <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-web</artifactId>
         <version>${spring.version}</version>
      </dependency>
      <dependency>
         <groupId>io.rest-assured</groupId>
         <artifactId>spring-mock-mvc</artifactId>
         <version>${spring-mock-mvc.version}</version>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.dbunit</groupId>
         <artifactId>dbunit</artifactId>
         <version>${dbunit.version}</version>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>com.h2database</groupId>
         <artifactId>h2</artifactId>
         <version>${h2.version}</version>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>net.bytebuddy</groupId>
         <artifactId>byte-buddy</artifactId>
         <version>${byte-buddy.version}</version>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>com.tngtech.archunit</groupId>
         <artifactId>archunit-junit5</artifactId>
         <version>${archunit.version}</version>
         <scope>test</scope>
      </dependency>
   </dependencies>

   <build>
      <finalName>testing-libraries-2</finalName>
      <plugins>
         <plugin>
            <artifactId>maven-war-plugin</artifactId>
            <version>2.4</version>
            <configuration>
               <failOnMissingWebXml>false</failOnMissingWebXml>
            </configuration>
         </plugin>
         <!-- Plugins for JACOCO Coverage report -->
         <plugin>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>
            <version>${jacoco.version}</version>
            <configuration>
               <excludes>
                  <exclude>cn/tuyucheng/taketoday/**/ExcludedPOJO.class</exclude>
                  <exclude>cn/tuyucheng/taketoday/**/*DTO.*</exclude>
                  <exclude>**/config/*</exclude>
               </excludes>
            </configuration>
            <executions>
               <execution>
                  <id>jacoco-initialize</id>
                  <goals>
                     <goal>prepare-agent</goal>
                  </goals>
               </execution>
               <execution>
                  <id>jacoco-site</id>
                  <phase>package</phase>
                  <goals>
                     <goal>report</goal>
                  </goals>
               </execution>
               <execution>
                  <id>check-coverage</id>
                  <phase>verify</phase>
                  <goals>
                     <goal>check</goal>
                  </goals>
                  <configuration>
                     <rules>
                        <rule>
                           <element>BUNDLE</element>
                           <limits>
                              <limit>
                                 <counter>INSTRUCTION</counter>
                                 <value>COVEREDRATIO</value>
                                 <minimum>0.70</minimum>
                              </limit>
                              <limit>
                                 <counter>BRANCH</counter>
                                 <value>COVEREDRATIO</value>
                                 <minimum>0.68</minimum>
                              </limit>
                           </limits>
                        </rule>
                     </rules>
                  </configuration>
               </execution>
            </executions>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
               <argLine>
                  --add-opens java.base/java.util=ALL-UNNAMED
                  --add-opens java.base/java.lang=ALL-UNNAMED
               </argLine>
            </configuration>
         </plugin>
      </plugins>
      <resources>
         <resource>
            <directory>src/test/resources</directory>
            <filtering>true</filtering>
         </resource>
      </resources>
   </build>

   <properties>
      <toolchains.java.version>8</toolchains.java.version>
      <maven.compiler.source>1.8</maven.compiler.source>
      <maven.compiler.target>1.8</maven.compiler.target>
      <maven-toolchains-plugin-version>3.1.0</maven-toolchains-plugin-version>
      <jacoco.version>0.8.8</jacoco.version>
      <system-rules.version>1.19.0</system-rules.version>
      <system-lambda.version>1.0.0</system-lambda.version>
      <system-stubs.version>1.1.0</system-stubs.version>
      <awaitility.version>3.0.0</awaitility.version>
      <hoverfly-java.version>0.8.1</hoverfly-java.version>
      <spring.version>4.3.8.RELEASE</spring.version>
      <spring-mock-mvc.version>5.3.0</spring-mock-mvc.version>
      <dbunit.version>2.7.0</dbunit.version>
      <archunit.version>0.23.1</archunit.version>
   </properties>
</project>